...

class SearchVC: UIViewController {
    var screenWidth = UIScreen.main.bounds.width
    let logoImageView = UIImageView()
    let countryTextField = CFTextField()
    let buttonsView = UIView()
    let searchCountryButton = CFButton(backgroundColor: .systemRed, title: "Search Country")
    let allCountriesButton = CFButton(backgroundColor: .systemGreen, title: "All Countries")
    var isCountryEntered: Bool { return !countryTextField.text!.isEmpty }
    let buttonPadding: CGFloat = 40
    override func viewDidLoad() {
        super.viewDidLoad()
        view.backgroundColor = .systemBackground
        configureUI()
...
