...

class CFAlertVC: UIViewController {

    let containerView = UIView()
    let titleLabel = CFTitleLabel(textAlignment: .center, fontSize: 20)
    let bodyLabel = CFBodyLabel(textAlignment: .center, fontSize: 15)
    let button = CFButton(backgroundColor: .systemRed, title: "Ok")

    var alertTitle: String?
    var bodyMessage: String?
    var buttonTitle: String?

    init(title: String, message: String, buttonTitle: String) {
...
